--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "~1.6.2"
+  },
+  "dependencies": {
+    "electron-window-state": "^4.1.1"
   }
 }
