--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "url" : "https://codeanywhere.com/editor/",
-  "icon" : "favicon-152.png",
+  "icon" : "images/favicon-152.png",
   "width": 800,
   "height": 600
 }
